--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8887
-
+github.client.id=1b408bbeb1875cb59887
+github.client.secret=0cb3f5e9c0bea2d16b94af4444fe47a8fa48d604
+github.redirect.uri=http://localhost:8887/callback
