终于解决了关于连接H2数据库的问题，删库重建就完事了！

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ server.port=8887
 github.client.id=1b408bbeb1875cb59887
 github.client.secret=0cb3f5e9c0bea2d16b94af4444fe47a8fa48d604
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:~/communitys
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
