--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.1.7.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>life.majiang.community</groupId>
-    <artifactId>community</artifactId>
+    <groupId>life.majiang.communitys</groupId>
+    <artifactId>communitys</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>community</name>
-    <description>community</description>
+    <name>communitys</name>
+    <description>communitys</description>
 
     <properties>
         <java.version>12</java.version>
@@ -69,7 +69,7 @@
             <plugin>
                 <groupId>org.flywaydb</groupId>
                 <artifactId>flyway-maven-plugin</artifactId>
-                <version>6.0.8</version>
+                <version>5.2.4</version>
                 <configuration>
                     <url>jdbc:h2:~/communitys</url>
                     <user>sa</user>
