使用SDK上传图片

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ server.port=8887
 github.client.id=1b408bbeb1875cb59887
 github.client.secret=c62830760cf7f2ded99b55a3aa40c9a582fa7f78
 github.redirect.uri=http://localhost:8887/callback
+ucloud.ufile.public-key=TOKEN_c19b030b-dd05-4f56-b951-e56ae9beff72
+ucloud.ufile.private-key=723ccc15-daf7-4ef1-b6d6-1b7985f6d46d
 spring.datasource.url=jdbc:h2:~/communitys
 spring.datasource.username=sa
 spring.datasource.password=123
